# tickbox

./: Cargo.toml  LICENSE  README.md
extra/: pre-commit.sh
extra/bump_version/: 95-publish.sh
extra/pre-commit/: 05-fmt.sh  10-test.sh  20-clippy.sh  tickbox.json
src/: main.rs
