[package]
name = "tickbox"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-parser = "0.9.1"
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync"] }
