[package]
name = "tickbox"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-parser = "0.9.1"
ansi-to-tui = "7.0.0"
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.28.1"
log = "0.4.26"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
simplelog = "0.12.2"
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync"] }
