[package]
name = "tickbox"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/tickbox"
description = "Simple tui workflow executor."
keywords = ["test", "pre-commit"]

[dependencies]
ansi-parser = "0.9.1"
ansi-to-tui = "7.0.0"
anyhow = "1.0.95"
itertools = "0.13.0"
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.28.1"
log = "0.4.26"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
simplelog = "0.12.2"
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync"] }
libc = "0.2.170"
